--- a/getmethere/src/screens/Main.css
+++ b/getmethere/src/screens/Main.css
@@ -6,7 +6,7 @@ body {
 	display: grid;
 	border: hidden;
 	width: 50vw;
-	height: 100vh;
+	height: 80vh;
 	margin: auto;
 	padding: 10px;
 	grid-template-rows: 33% 33% 33%;
@@ -28,6 +28,7 @@ body {
 .gridItem-location:hover {
 	opacity: 1;
 	background-color: white;
+	box-shadow: 7px 7px 10px lightsteelblue;
 }
 .gridItem-weather {
 	grid-area: b;
@@ -41,6 +42,7 @@ body {
 .gridItem-weather:hover {
 	opacity: 1;
 	background-color: white;
+	box-shadow: 7px 7px 10px lightsteelblue;
 }
 
 .gridItem-transport {
@@ -55,6 +57,7 @@ body {
 .gridItem-transport:hover {
 	opacity: 1;
 	background-color: white;
+	box-shadow: 7px 7px 10px lightsteelblue;
 }
 
 .image-driving {
@@ -90,8 +93,8 @@ body {
 	transition: 0.5s ease;
 	opacity: 0;
 	position: absolute;
-	margin-top: -1%;
-	margin-left: 1.5%;
+	margin-top: 1.5%;
+	margin-left: 1%;
 	border: hidden;
 }
 
