--- a/getmethere/src/screens/Main.css
+++ b/getmethere/src/screens/Main.css
@@ -1,3 +1,49 @@
+h2 {
+	font-family: "Coolvetica";
+	font-size: 70px;
+	margin: 50px;
+	animation-duration: 3s;
+	animation-name: slidein;
+}
+
+@keyframes slidein {
+	from {
+		margin-left: 100%;
+		width: 300%;
+	}
+
+	to {
+		margin-left: 0%;
+		width: 100%;
+	}
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: rgb(82, 78, 78);
+}
+
+li {
+	float: left;
+}
+
+li a {
+	display: block;
+	font-family: "Coolvetica";
+	font-size: 20px;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+li a:hover {
+	background-color: lightblue;
+}
+
 body {
 	text-align: center;
 }
@@ -6,10 +52,8 @@ body {
 	display: grid;
 	border: hidden;
 	width: 50vw;
-	height: 80vh;
 	margin: auto;
-	padding: 10px;
-	grid-template-rows: 33% 33% 33%;
+	position: static;
 	grid-template-areas:
 		"a"
 		"b"
@@ -20,9 +64,11 @@ body {
 	grid-area: a;
 	border: 2px solid dimgray;
 	border-radius: 25px;
-	margin: 5px;
-	background-color: lightgrey;
-	opacity: 0.5;
+	background: url("../assets/location.jpg");
+	background-size: 320px 320px;
+	background-repeat: no-repeat;
+	background-position: center;
+	padding: 5% 0%;
 }
 
 .gridItem-location:hover {
@@ -30,13 +76,25 @@ body {
 	background-color: white;
 	box-shadow: 7px 7px 10px lightsteelblue;
 }
+
+.locationtext {
+	font-family: "Coolvetica";
+	font-size: 65px;
+	text-align: left;
+	line-height: 0px;
+	margin: 40px 40px;
+}
+
 .gridItem-weather {
 	grid-area: b;
 	border: 2px solid dimgray;
 	border-radius: 25px;
 	margin: 5px;
-	background-color: lightgrey;
-	opacity: 0.5;
+	background: url("../assets/weather.jpg");
+	background-size: 430px 300px;
+	background-repeat: no-repeat;
+	background-position: left;
+	padding: 5% 0%;
 }
 
 .gridItem-weather:hover {
@@ -45,19 +103,45 @@ body {
 	box-shadow: 7px 7px 10px lightsteelblue;
 }
 
+.weathertext {
+	font-family: "Coolvetica";
+	font-size: 65px;
+	text-align: right;
+	line-height: 0px;
+	margin: 45px 40px;
+}
+
+.weather-bottom {
+	text-align: right;
+	position: relative;
+	bottom: 40%;
+	right: 12%;
+}
+
 .gridItem-transport {
 	grid-area: c;
 	border: 2px solid dimgray;
 	border-radius: 25px;
 	margin: 5px;
-	background-color: lightgrey;
-	opacity: 0.5;
+	background: url("../assets/transport.jpg");
+	background-size: 500px 320px;
+	background-repeat: no-repeat;
+	background-position: right;
 }
 
 .gridItem-transport:hover {
 	opacity: 1;
 	background-color: white;
 	box-shadow: 7px 7px 10px lightsteelblue;
+}
+.transporttext {
+	font-family: "Coolvetica";
+	font-size: 65px;
+	text-align: left;
+	line-height: 0px;
+	margin: 40px 60px;
+	padding-bottom: 5%;
+	border: hidden;
 }
 
 .image-driving {
@@ -115,7 +199,47 @@ body {
 }
 .flex-container-transport {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	border: hidden;
 	justify-content: space-evenly;
+	padding-top: 30%;
+	padding-bottom: 5%;
+}
+
+.transport-item {
+	border: hidden;
+	display: inline-flex;
+	justify-content: center;
+}
+
+.taxiscreen {
+	width: 100%;
+	height: 100%;
+}
+
+.image-weather {
+	width: 50px;
+	height: 50px;
+}
+
+.weather-flexbox {
+	display: flex;
+	flex-direction: column;
+}
+
+.weather-flexitem {
+	border: 2px solid black;
+	display: inline-flex;
+	justify-content: center;
+}
+
+table {
+	margin: auto;
+	width: 50%;
+	padding-top: 15%;
+}
+
+td {
+	margin: auto;
+	width: 50%;
 }
